--- a/index_temp.html
+++ b/index_temp.html
@@ -7,6 +7,7 @@
     <body>
         <section id="navigation-bar">
             <div id="navbar">
+                <div class="first-group">
                 <div id="menu-button">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope yt-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope yt-icon">
                     <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" class="style-scope yt-icon"></path>
@@ -14,7 +15,7 @@
                 </div>
 
                 <div id="youtube-icon">
-                    <svg viewBox="0 0 200 60" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope ytd-topbar-logo-renderer" style=""><g viewBox="0 0 200 60" preserveAspectRatio="xMidYMid meet" class="style-scope ytd-topbar-logo-renderer">
+                    <svg viewBox="0 0 200 60" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope ytd-topbar-logo-renderer" style="font-size:100%;width:100px;height:30px;background-color: transparent; background-size:100px 30px;background-repeat: no-repeat; border-width: 0px; border-style: none; margin: 0px; padding: 0px; border-color: white; "><g viewBox="0 0 200 60" preserveAspectRatio="xMidYMid meet" class="style-scope ytd-topbar-logo-renderer">
                     <g class="style-scope ytd-topbar-logo-renderer">
                       <path fill="#FF0000" d="M63,14.87c-0.72-2.7-2.85-4.83-5.56-5.56C52.54,8,32.88,8,32.88,8S13.23,8,8.32,9.31
                         c-2.7,0.72-4.83,2.85-5.56,5.56C1.45,19.77,1.45,30,1.45,30s0,10.23,1.31,15.13c0.72,2.7,2.85,4.83,5.56,5.56
@@ -56,6 +57,7 @@
                       </g>
                     </g>
                   </g></svg>
+                </div>
                 </div>
                 <div class="second-group">
                     <input id="search-bar" placeholder="Search" name="search_query" value="" title="Search">
