--- a/index_temp.html
+++ b/index_temp.html
@@ -60,12 +60,12 @@
                 </div>
                 </div>
                 <div class="second-group">
-                    <input id="search-bar" placeholder="Search" name="search_query" value="" title="Search">
+                    <input id="search-bar" placeholder="Search" name="search_query" value="" title="Search" style="direction:ltr;box-shadow:rgb(238, 238, 238) 0px 1px 2px inset;background-color: rgb(255, 255, 255); font-size:14px;height:29px;line-height:30px;overflow-x:hidden;overflow-y:hidden;position:relative;box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; border-width: 1px; border-style: solid; margin: 0px 0px 2px; padding: 0px; border-color: rgb(204, 204, 204); ">
                     <button style="direction:ltr;font:normal normal normal 12px/normal 'YouTube Noto', Roboto, arial, sans-serif;font-family:'YouTube Noto', Roboto, arial, sans-serif;display:inline-block;font-weight:500;font-size:11px;text-decoration:none;white-space:nowrap;word-wrap:normal;line-height:normal;vertical-align:middle;cursor:pointer;border-top-right-radius:2px 2px;border-bottom-right-radius:2px 2px;box-shadow:rgba(0, 0, 0, 0.046875) 0px 1px 0px;background-color: rgb(248, 248, 248); color:rgb(51, 51, 51);height:29px;float:right;border-top-left-radius:0px 0px;border-bottom-left-radius:0px 0px;outline: invert none 0px; border-width: 1px 1px 1px 0px; border-style: solid solid solid none; margin: 0px; padding: 0px; border-color: rgb(211, 211, 211) rgb(211, 211, 211) rgb(211, 211, 211) white; "><span style="opacity:0.5;"></span><span style="font-size:100%;display:block;opacity:0.6;text-indent:-10000px;background-image:url('https://archive.ph/Bss88/73e7cc59947d2ad243d63294411f83990629f7fc.png');background-color: transparent; width:15px;height:15px;box-shadow:none;background-position: -28px -66px; background-repeat: no-repeat; border-width: medium; border-style: none; margin: 0px 25px; padding: 0px; border-color: white; "><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope yt-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope yt-icon">
                         <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" class="style-scope yt-icon"></path>
                     </g></svg></span></button>
                 </div>
-
+                <div class="third-group" >
                 <div class="navbar-button">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope yt-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope yt-icon">
                     <path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4zM14 13h-3v3H9v-3H6v-2h3V8h2v3h3v2z" class="style-scope yt-icon"></path>
@@ -85,6 +85,7 @@
                     <button type="button" style="font:normal normal normal 12px/normal 'YouTube Noto', Roboto, arial, sans-serif;font-family:'YouTube Noto', Roboto, arial, sans-serif;display:inline-block;height:28px;font-weight:500;font-size:11px;text-decoration:none;white-space:nowrap;word-wrap:normal;line-height:normal;vertical-align:middle;cursor:pointer;border-top-left-radius:2px 2px;border-top-right-radius:2px 2px;border-bottom-right-radius:2px 2px;border-bottom-left-radius:2px 2px;box-shadow:rgba(0, 0, 0, 0.046875) 0px 1px 0px;background-color: rgb(22, 122, 198); color:rgb(255, 255, 255);outline: invert none 0px; border-width: 1px; border-style: solid; margin: 0px; padding: 0px 10px; border-color: rgb(22, 122, 198); "><span style="font-size:100%;background-color: transparent; border-width: 0px; border-style: none; margin: 0px; padding: 0px; border-color: white; ">Sign in</span></button>
                 </div>
             </div>
+        </div>
         </section>
 
         <div class="middle-container">
