--- a/restructured_file.html
+++ b/restructured_file.html
@@ -666,35 +666,22 @@
             </span></button>
             </div>
             <div class="second-footer-list">
-                <ul style="font-size:100%;background-color: transparent; white-space:nowrap;vertical-align:middle;display:inline;list-style: none outside none; 
-                border-width: 0px; border-style: none; margin: 0px; padding: 0px; border-color: white;">
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">About</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Press</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Copyright</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Creators</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Advertise</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Developers</li>     
+                <ul class="ul-footer">
+                    <li class="li-footer">About</li>
+                    <li class="li-footer">Press</li>
+                    <li class="li-footer">Copyright</li>
+                    <li class="li-footer">Creators</li>
+                    <li class="li-footer">Advertise</li>
+                    <li class="li-footer">Developers</li>    
                 </ul>
             </div>
             <div class="third-footer-list">
-                <ul style="font-size:100%;background-color: transparent; white-space:nowrap;vertical-align:middle;display:inline;list-style: none outside none; 
-                border-width: 0px; border-style: none; margin: 0px; padding: 0px; border-color: white;">
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Terms</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Privacy</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Policy & Safety</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">Test</li>
-                    <li style="font-size:100%;background-color: transparent; display:inline-block;border-width: 0px; border-style: none; margin: 0px 14px 0px 0px; 
-                    padding: 0px; border-color: white; ">new features</li>  
+                <ul class="ul-footer">
+                <li class="li-footer">Terms</li>
+                <li class="li-footer">Privacy</li>
+                <li class="li-footer">Policy & Safety</li>
+                <li class="li-footer">Test</li>
+                <li class="li-footer">new features</li>  
                 </ul>    
             </div>
         </footer>
