--- a/restructured_file.html
+++ b/restructured_file.html
@@ -148,6 +148,7 @@
                                                 <path d="M14 10H2v2h12v-2zm0-4H2v2h12V6zm4 8v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM2 16h8v-2H2v2z" class="style-scope yt-icon"></path>
                                             </g></svg>
                                         </div>
+                                        Save
                                     </div>
                                 
                                     <div class="more-container">
