Added de profile data
Added the profile data with some styling

--- a/restructured_file.html
+++ b/restructured_file.html
@@ -87,7 +87,7 @@
                                 <path d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z" class="style-scope yt-icon"></path>
                             </g></svg>
                         </div>
-                        <div>
+                        <div class="signin-btn-container">
                             <button id="button" type="button" style=""><span style="font-size:100%;background-color: transparent; border-width: 0px; border-style: none; margin: 0px; padding: 0px; border-color: white; ">Sign in</span></button>
                         </div>
                     </div>
@@ -166,9 +166,25 @@
                     </section>
 
                     <section id="description-section">
-                        <h3>The Odin Project</h3>
+
+                        <div class="profile-section">
+
+                            <div class="first-profile-section">
+                                <img src="https://yt3.ggpht.com/a/AGF-l7_mhE28uQAUvkl0P0gQ1-7umWeWprf3QkZoMw=s88-c-k-c0xffffffff-no-rj-mo" alt="user profile picture" class="profile-thumbnail">
+                                
+                                <div class="profile-name">
+                                    <h3>The Odin Project</h3>
+                                    <h4>26,300 subscribers</h4>
+                                </div>
+                            </div>
+
+                            <div class="follow-btn">
+                                <button class="follow-button">Follow</button>
+                            </div>
+                        </div>
                         <p>How do you contribute to open source?  In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github.  I'll also describe what kinds of contributions open source software projects are typically looking for.  As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails.  You can find more information about that project at http://theodinproject.com.</p>
-                    </section>
+            
+                   </section>
 
                     <section id="comments-section">
                         <div style="font-size:100%;background-color: rgb(255, 255, 255); box-shadow:rgba(0, 0, 0, 0.0976562) 0px 1px 2px;box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; border-width: 0px; border-style: none; margin: 0px 0px 10px; padding: 15px; border-color: white; ">
