updated css inline
- removed the inline css from index.html
- added css to the style.css file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                             </g>
                             </svg>
                         </div>
-
                         <div id="youtube-icon">
                             <svg id="icon1" viewBox="0 0 200 60" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope ytd-topbar-logo-renderer" >
                                 <g class="style-scope ytd-topbar-logo-renderer">
@@ -59,7 +58,7 @@
                                         c0.13,1.17,0.2,2.83,0.2,4.99V36.93z" class="style-scope ytd-topbar-logo-renderer"></path>
                                     </g>
                                 </g>
-                                </svg>
+                            </svg>
                         </div>
                     </div>
                     <div class="second-group">
@@ -179,7 +178,7 @@
                             </div>
 
                             <div class="follow-btn">
-                                <button class="follow-button button">Follow</button>
+                                <button class="follow-button button">Subscribe</button>
                             </div>
                         </div>
                         <p>How do you contribute to open source?  In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github.  I'll also describe what kinds of contributions open source software projects are typically looking for.  As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails.  You can find more information about that project at http://theodinproject.com.</p>
@@ -691,12 +690,14 @@
                 <span class="span-footer8"></span></span>
                 <span class="span-footer4">History</span>
                 <span class="span-footer9"></span></a>
-            <button type="button" style="font:normal normal normal 12px/normal 'YouTube Noto', Roboto, arial, sans-serif;font-family:'YouTube Noto', Roboto, arial, sans-serif;height:28px;font-weight:500;font-size:11px;text-decoration:none;white-space:nowrap;word-wrap:normal;line-height:normal;vertical-align:middle;cursor:pointer;border-top-left-radius:2px 2px;border-top-right-radius:2px 2px;border-bottom-right-radius:2px 2px;border-bottom-left-radius:2px 2px;box-shadow:rgba(0, 0, 0, 0.046875) 0px 1px 0px;background-color: rgb(248, 248, 248); color:rgb(51, 51, 51);display:inline-block;outline: invert none 0px; border-width: 1px; border-style: solid; margin: 0px; padding: 0px 10px; border-color: rgb(211, 211, 211); ">
-                <span class="span-footer1"></span>
-                <span class="span-footer2">
-                <span style="font-size:100%;display:inline-block;vertical-align:middle;opacity:0.5;background-image:url('https://archive.ph/Bss88/73e7cc59947d2ad243d63294411f83990629f7fc.png');background-color: transparent; width:15px;height:16px;background-position: -147px -230px; background-repeat: no-repeat; border-width: 0px; border-style: none; margin: 0px; padding: 0px; border-color: white; "></span></span>
-                <span class="span-footer4">Help
-            </span></button>
+                <button type="button" class="button-footer2">
+                    <span class="span-footer1"></span>
+                    <span class="span-footer2">
+                        <span class="span-footer10"></span>
+                    </span>
+                    <span class="span-footer4">Help
+                    </span>
+                </button>
             </div>
             <div class="second-footer-list">
                 <ul class="ul-footer">
