add final things
add screenshot
remove inline css
add style css lines
add license
add README

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="container">
+            <header>
             <nav>
                 <div class="navbar">
                     <div class="first-group">
@@ -64,7 +65,7 @@
                     <div class="second-group">
                         <input class="search-bar" >
                         <button id="search-button" >
-                            <span style="opacity:0.5;"></span>
+                            <span class="opacity"></span>
                             <span id="span-search-button"><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope yt-icon" ><g class="style-scope yt-icon1">
                             <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" class="style-scope yt-icon"></path>
                         </g></svg></span></button>
@@ -87,12 +88,12 @@
                             </g></svg>
                         </div>
                         <div class="signin-btn-container">
-                            <button id="button" type="button" style=""><span class="sidebar-border-style">Sign in</span></button>
+                            <button id="button" type="button" ><span class="sidebar-border-style">Sign in</span></button>
                         </div>
                     </div>
             </div>
         </nav>
-
+    </header>
         <div class="body-container">
             <main>
                 <div class="left-section">
@@ -671,13 +672,13 @@
                     <span class="span-footer6"></span></button>
                     </li>
                     <li class="li-footer1">
-                    <button type="button" class="button-footer1"><span style="opacity:0.5;"></span><span class="sidebar-border-style">
+                    <button type="button" class="button-footer1"><span class="opacity"></span><span class="sidebar-border-style">
                     <span class="span-footer5">
                     Location: </span>
                     Netherlands </span><span class="span-footer6"></span></button>
                     </li>
                     <li class="li-footer1">
-                    <button type="button" class="button-footer1"><span style="opacity:0.5;"></span><span class="sidebar-border-style">
+                    <button type="button" class="button-footer1"><span class="opacity"></span><span class="sidebar-border-style">
                     <span class="span-footer5">
                     Restricted Mode: </span>
                     Off </span><span class="span-footer6"></span></button>
