some fix by the review
delete commented code
add share button
add pointer (like dislike share save more)

--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
                         </iframe>
 
                     
-                        <!-- <div> -->
                             <h2>Contributing to Open Source Part I: The Easy Way</h2>
 
                             <div class="video-footer">
@@ -135,7 +134,7 @@
                                         7
                                     </div>
 
-                                    <div class="share-container">
+                                    <button class="share-container">
                                         <div class="share-icon">
                                             <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="viewbox" ><g class="style-scope yt-icon">
                     
@@ -143,7 +142,7 @@
                                             </g></svg>
                                         </div>
                                         Share
-                                    </div>
+                                    </button>
 
                                     <div class="save-container">
                                         <div class="save-button">
