fixed bugs and aligments
- fixed button icon bug
- fixed alignment of body elements

--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
                                     </div>
 
                                     <button class="share-container">
-                                        <div class="share-icon">
+
                                             <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="viewbox" ><g class="style-scope yt-icon">
                     
                                                 <path d="M11.7333 8.26667V4L19.2 11.4667L11.7333 18.9333V14.56C6.4 14.56 2.66667 16.2667 0 20C1.06667 14.6667 4.26667 9.33333 11.7333 8.26667Z" class="style-scope yt-icon"></path>
                                             </g></svg>
-                                        </div>
+
                                         Share
                                     </button>
 
@@ -181,7 +181,7 @@
                                 <button class="follow-button button">Subscribe</button>
                             </div>
                         </div>
-                        <p>How do you contribute to open source?  In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github.  I'll also describe what kinds of contributions open source software projects are typically looking for.  As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails.  You can find more information about that project at http://theodinproject.com.</p>
+                        <div id="vid-desc">How do you contribute to open source?  In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github.  I'll also describe what kinds of contributions open source software projects are typically looking for.  As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails.  You can find more information about that project at http://theodinproject.com.</div>
             
                    </section>
 
